# ml_research_assistant

./: .env  .gitignore  DEPLOYMENT.md  pyproject.toml  requirements.txt
app/: config.py
app/data/: load_arxiv.py
app/ingestion/: chunking.py  embeddings.py  index_weaviate.py
app/rag/: evaluation.py  llm_client.py  pipeline.py  reranker.py  retriever.py
app/ui/: streamlit_app.py
deploy/: copy_to_ec2.ps1  setup_ec2.sh  start_app.sh
scripts/: build_index.py
